[package]
name = "fanqie_dev_tool"
version = "0.1.3"
edition = "2018"
description = "A useful development tool for various tasks，Refer to https://github.com/maochunguang/my_dev_tool repository, thanks to the original author"
license = "MIT OR Apache-2.0"
default-run = "fanqie_dev_tool"

[dependencies]
clap = "4.4.0"
urlencoding = "2.1"
clipboard = "0.5.0"

[[bin]]
name = "fanqie_dev_tool"
path = "src/main.rs"

[[bin]]
name = "fq"
path = "src/main.rs"